--- a/logogame/webgame.css
+++ b/logogame/webgame.css
@@ -20,7 +20,7 @@ body {
 }
 body {
     color: #fff;
-  font-family: 'Ranchers', cursive;
+  font-family: 'Ranchers', '微軟正黑體';
     letter-spacing: 5px;
   background: #2f466e;
   font-size: 1rem;
